# clicky

./: .gitignore  .prettierrc  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
logs/: logging.ini
src/alembic/: env.py
src/alembic/versions/: 93385039b371_init.py
src/clicky/: __main__.py  entities.py  main.py  services.py
src/clicky/api/: __init__.py  deps.py  middlewares.py  routes.py  schemas.py
src/clicky/config/: __init__.py  local.env  logging.ini  logging.py
src/clicky/db/: __init__.py  session.py  tables.py
src/static/css/: main.css
src/static/src/: tw.css
src/templates/: index.html
src/templates/components/: _query_history.html  _query_history_item.html  _query_input.html  _query_result.html
src/templates/icons/: _bolt.html  _spinner.html
src/templates/responses/: optimize_query_resp.html  run_query_resp.html
src/templates/shared/: _base.html  _footer.html  _header.html
tests/: conftest.py
tests/clicky/services/: test_session_service.py
